Added Chef details page with goolge maps api

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -5,6 +5,7 @@
 /* Pages */
 @import "pages/LoginSignup.css";
 @import "pages/ChefIndex.css";
+@import "pages/ChefDetails.css";
 
 /* Components */
 @import "cmps/AppHeader.css";
