--- a/src/assets/styles/pages/ChefDetails.css
+++ b/src/assets/styles/pages/ChefDetails.css
@@ -56,23 +56,174 @@
     font-size: 0.8rem;
 }
 
+.whats-included {
+    padding: 48px 0;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.3);
+
+    h2 {
+        padding: 0 0 24px;
+        margin: 0;
+        font-weight: 600;
+        font-size: 22px;
+    }
+
+    .offers-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+
+        .offer {
+            display: flex;
+            padding-bottom: 16px;
+            align-items: center;
+            gap: 16px;
+            white-space: nowrap;
+        }
+    }
+}
+
 .overview,
 .whats-included,
 .reviews,
 .map {
     background: white;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 2rem;
     margin-top: 2rem;
 }
 
-.review {
-    margin-bottom: 1rem;
-}
+.rating-container {
+    padding: 48px 0;
+    background: white;
+    border-radius: 8px;
+    padding: 2rem;
 
-.review p {
-    margin: 0.5rem 0;
+    .rating-reviews {
+        display: flex;
+        flex-direction: column;
+
+        .reviews-rate {
+            display: flex;
+            gap: 5px;
+            align-items: center;
+            font-size: 30px;
+            font-weight: 700;
+            margin-bottom: 20px;
+        }
+
+        .rating {
+            display: flex;
+            padding: 0 0 40px;
+            gap: 21px;
+
+            .overall-rating {
+                span {
+                    margin: 0 0 8px;
+                    font-size: 18px;
+                    font-weight: 500;
+                }
+
+                .progress {
+                    display: flex;
+                    flex-direction: column;
+                    font-size: 13px;
+                }
+
+                .rating-progress {
+                    display: flex;
+                    align-items: center;
+                    gap: 8px;
+                }
+
+                progress {
+                    height: 10px;
+                    accent-color: black;
+                }
+            }
+
+            .rating-detail {
+                display: flex;
+
+                .rating-item {
+                    font-size: 21px;
+                    font-weight: 500;
+                    padding: 0 38px 4px;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 23px;
+                    border-left: 1px solid rgba(128, 128, 128, 0.3);
+
+                    span {
+                        font-size: 18px;
+                        font-weight: 500;
+                        white-space: nowrap;
+                    }
+                }
+            }
+        }
+    }
+
+    .guest-reviews-container {
+        border-top: 1px solid rgba(128, 128, 128, 0.3);
+        padding-top: 40px;
+        display: grid;
+        gap: 3.5em;
+        grid-template-columns: repeat(2, 470px);
+
+        .review {
+            gap: 10px;
+            display: flex;
+            flex-direction: column;
+
+            .mini-user {
+                display: flex;
+                gap: 17px;
+
+                .review-img {
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50px;
+                    object-fit: cover;
+                }
+
+                .mini-user-details {
+                    gap: 2px;
+                    display: flex;
+                    flex-direction: column;
+                    margin-top: 5px;
+                }
+
+                h3 {
+                    margin: 0;
+                }
+
+                span {
+                    font-size: 14px;
+                }
+            }
+        }
+
+        .review-info {
+            display: flex;
+            gap: 5px;
+            align-items: center;
+
+            .star-review {
+                display: flex;
+                gap: 1px;
+                align-items: center;
+            }
+
+            .date-review {
+                font-weight: bold;
+                font-size: 14px;
+            }
+        }
+
+        .review-txt {
+            font-size: 17px;
+        }
+    }
 }
 
 /* Responsive adjustments */
