Added create post modal

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -14,3 +14,4 @@
 @import "cmps/ChefList.css";
 @import "cmps/ChefPreview.css";
 @import "cmps/EditPostModal.css";
+@import "cmps/FloatingActionButton.css";
