Added user profile page

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -7,6 +7,7 @@
 @import "pages/ChefIndex.css";
 @import "pages/ChefDetails.css";
 @import "pages/MyPosts.css";
+@import "pages/ProfileIndex.css";
 
 /* Components */
 @import "cmps/AppHeader.css";
