--- a/src/assets/styles/cmps/EditPostModal.css
+++ b/src/assets/styles/cmps/EditPostModal.css
@@ -98,7 +98,23 @@
     align-items: center;
 }
 
-.upload-preview img {
+.upload-preview.create-post-uploader img {
+    max-width: 100%;
+    max-height: 200px;
+    margin-top: 10px;
+    border-radius: 4px;
+    width: unset;
+    height: unset;
+}
+
+.upload-preview.create-post-uploader {
+    position: static;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.upload-preview.create-post-uploader img {
     max-width: 100%;
     max-height: 200px;
     margin-top: 10px;
