--- a/src/assets/styles/pages/MyPosts.css
+++ b/src/assets/styles/pages/MyPosts.css
@@ -28,9 +28,9 @@
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
 }
 
-.post-image {
+.mypost-image {
     width: 100%;
-    height: 200px;
+    /* height: 200px; */
     object-fit: cover;
 }
 
