--- a/src/assets/styles/pages/ChefIndex.css
+++ b/src/assets/styles/pages/ChefIndex.css
@@ -1,13 +1,16 @@
 .chef-index {
     padding: 20px 80px;
+    background: url('../../imgs/main_background3.jpeg') no-repeat center center/cover;
 
     .section {
         margin-bottom: 40px;
 
-        .section h2 {
+        & h2 {
             margin-bottom: 20px;
             font-size: 24px;
             font-weight: bold;
+            color: #fff;
+            text-decoration: underline;
         }
 
         .pagination-controls {
@@ -17,10 +20,11 @@
             margin-bottom: 20px;
 
             button {
-                background-color: #fff;
-                border: 1px solid #ccc;
-                padding: 10px;
+                background-color: transparent;
+                border: none;
                 cursor: pointer;
+                font-size: 24px;
+                color: #fff;
 
                 &:disabled {
                     opacity: 0.5;
@@ -28,7 +32,24 @@
                 }
             }
         }
-
     }
 
+    .fab {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 50%;
+        padding: 15px;
+        font-size: 24px;
+        cursor: pointer;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        transition: background-color 0.3s ease;
+    }
+
+    .fab:hover {
+        background-color: #0056b3;
+    }
 }
