--- a/src/assets/styles/pages/MyPosts.css
+++ b/src/assets/styles/pages/MyPosts.css
@@ -1,14 +1,16 @@
 .posts-container {
-    max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
+    background: url('../../imgs/main_background2.jpg') no-repeat center center/cover;
+    width: 100%;
+    height: 100%;
 }
 
 .myposts-title {
     font-size: 32px;
     font-weight: bold;
     margin-bottom: 20px;
-    color: #484848;
+    color: #ffffff;
 }
 
 .posts-grid {
@@ -22,6 +24,7 @@
     border-radius: 12px;
     overflow: hidden;
     transition: box-shadow 0.3s ease;
+    background-color: #ffffffce;
 }
 
 .post-card:hover {
@@ -30,7 +33,7 @@
 
 .mypost-image {
     width: 100%;
-    /* height: 200px; */
+    height: 200px;
     object-fit: cover;
 }
 
