--- a/src/assets/styles/pages/ProfileIndex.css
+++ b/src/assets/styles/pages/ProfileIndex.css
@@ -1,3 +1,9 @@
+.myprofile-container {
+    height: 100%;
+    background: url('../../imgs/main_background2.jpg') no-repeat center center/cover;
+    padding: 60px;
+}
+
 .myprofile-page {
     max-width: 400px;
     margin: 0 auto;
