--- a/src/assets/styles/cmps/UserActions.css
+++ b/src/assets/styles/cmps/UserActions.css
@@ -68,3 +68,9 @@
    .user-actions-container:hover {
      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
    }
+
+   .user-icon {
+     width: 30px;
+     height: 30px;
+     border-radius: 50%;
+   }
