--- a/src/assets/styles/pages/LoginSignup.css
+++ b/src/assets/styles/pages/LoginSignup.css
@@ -82,6 +82,7 @@
                 padding: 15px;
                 background-color: #333;
                 color: white;
+                margin-top: 16px;
                 border: 2px solid #333;
                 border-radius: 5px;
                 font-weight: 600;
